import {
  sqliteTable,
  text,
  integer,
  real,
  primaryKey,
  index,
  uniqueIndex,
} from "drizzle-orm/sqlite-core";
import { relations } from "drizzle-orm";
import { drizzle } from "drizzle-orm/d1";
import type { Context } from "hono";
import type { Env } from "../index";
import type { Sex, Theme, SetType, Formula1rm, PrType } from "./constants";

// ==========================================
// BETTER AUTH TABLES (SQLite)
// ==========================================

/** Managed by Better Auth — core user identity. */
export const user = sqliteTable("user", {
  id: text("id").primaryKey(),
  name: text("name").notNull(),
  email: text("email").notNull().unique(),
  emailVerified: integer("email_verified", { mode: "boolean" }).notNull().default(false),
  image: text("image"),
  createdAt: integer("created_at", { mode: "timestamp" }).notNull(),
  updatedAt: integer("updated_at", { mode: "timestamp" }).notNull(),
});

/** Managed by Better Auth — active user sessions with expiry. */
export const session = sqliteTable(
  "session",
  {
    id: text("id").primaryKey(),
    expiresAt: integer("expires_at", { mode: "timestamp" }).notNull(),
    token: text("token").notNull().unique(),
    createdAt: integer("created_at", { mode: "timestamp" }).notNull(),
    updatedAt: integer("updated_at", { mode: "timestamp" }).notNull(),
    ipAddress: text("ip_address"),
    userAgent: text("user_agent"),
    userId: text("user_id")
      .notNull()
      .references(() => user.id),
  },
  (table) => [index("idx_session_user_id").on(table.userId)],
);

/** Managed by Better Auth — OAuth/credential provider links per user. */
export const account = sqliteTable("account", {
  id: text("id").primaryKey(),
  accountId: text("account_id").notNull(),
  providerId: text("provider_id").notNull(),
  userId: text("user_id")
    .notNull()
    .references(() => user.id),
  issuer: text("issuer"),
  accessToken: text("access_token"),
  refreshToken: text("refresh_token"),
  idToken: text("id_token"),
  accessTokenExpiresAt: integer("access_token_expires_at", { mode: "timestamp" }),
  refreshTokenExpiresAt: integer("refresh_token_expires_at", { mode: "timestamp" }),
  scope: text("scope"),
  password: text("password"),
  createdAt: integer("created_at", { mode: "timestamp" }).notNull(),
  updatedAt: integer("updated_at", { mode: "timestamp" }).notNull(),
});

/** Managed by Better Auth — email/phone verification tokens. */
export const verification = sqliteTable("verification", {
  id: text("id").primaryKey(),
  identifier: text("identifier").notNull(),
  value: text("value").notNull(),
  expiresAt: integer("expires_at", { mode: "timestamp" }).notNull(),
  createdAt: integer("created_at", { mode: "timestamp" }),
  updatedAt: integer("updated_at", { mode: "timestamp" }),
});

// Better Auth relations (required for Drizzle relational queries / join support)
export const userRelations = relations(user, ({ many }) => ({
  accounts: many(account),
  sessions: many(session),
}));

export const accountRelations = relations(account, ({ one }) => ({
  user: one(user, { fields: [account.userId], references: [user.id] }),
}));

export const sessionRelations = relations(session, ({ one }) => ({
  user: one(user, { fields: [session.userId], references: [user.id] }),
}));

// ==========================================
// GYMLOGGER DOMAIN TABLES
// ==========================================

/** Lookup table for weight and length units (e.g. kg, lbs, cm, in). Seeded at migration time. */
export const units = sqliteTable("units", {
  code: text("code").primaryKey(),
  type: text("type").notNull(),
  name: text("name").notNull(),
  symbol: text("symbol").notNull(),
});

/** Optional extended profile for a user (bio, birthday, location). */
export const usersProfile = sqliteTable("user_profile", {
  id: text("id").primaryKey(),
  location: text("location"),
  birthday: text("birthday"),
  sex: text("sex").$type<Sex>(),
  bio: text("bio"),
  createdAt: integer("created_at", { mode: "timestamp" }),
});

/** Per-user app preferences: theme, preferred units, language, rest timer, notifications. */
export const userSettings = sqliteTable("user_settings", {
  userId: text("user_id").primaryKey(),
  theme: text("theme").$type<Theme>().default("S"),
  preferredWeightUnit: text("preferred_weight_unit").default("kg"),
  preferredLengthUnit: text("preferred_length_unit").default("cm"),
  language: text("language").default("en"),
  restTimerDurationSeconds: integer("rest_timer_duration_seconds").default(90),
  notificationsEnabled: integer("notifications_enabled", { mode: "boolean" }).default(true),
  updatedAt: integer("updated_at", { mode: "timestamp" }),
});

/** Lookup table for muscle groups (e.g. Chest, Back, Quads). Seeded at migration time. */
export const muscleGroups = sqliteTable("muscle_groups", {
  id: text("id").primaryKey(),
  name: text("name").notNull().unique(),
});

/** Exercise library — preset (is_custom=false) and user-created exercises. */
export const exercises = sqliteTable(
  "exercises",
  {
    id: text("id").primaryKey(),
    name: text("name").notNull(),
    category: text("category").notNull(),
    bodyPart: text("body_part").notNull(),
    equipment: text("equipment"),
    instructions: text("instructions"),
    instructionSteps: text("instruction_steps"),
    muscleGroupId: text("muscle_group_id"),
    target: text("target"),
    mediaId: text("media_id"),
    image: text("image"),
    gifUrl: text("gif_url"),
    attribution: text("attribution"),
    isCustom: integer("is_custom", { mode: "boolean" }).default(false),
    userId: text("user_id"),
    createdAt: integer("created_at", { mode: "timestamp" }),
  },
  (table) => [
    index("idx_exercises_muscle_group").on(table.muscleGroupId),
    index("idx_exercises_custom").on(table.userId),
  ],
);

/** Join table linking exercises to their secondary muscle groups. */
export const exerciseSecondaryMuscles = sqliteTable(
  "exercise_secondary_muscles",
  {
    exerciseId: text("exercise_id").notNull(),
    muscleGroupId: text("muscle_group_id").notNull(),
  },
  (table) => [primaryKey({ columns: [table.exerciseId, table.muscleGroupId] })],
);

/** Reusable workout templates created by users. */
export const workoutTemplates = sqliteTable(
  "workout_templates",
  {
    id: text("id").primaryKey(),
    userId: text("user_id").notNull(),
    title: text("title").notNull(),
    notes: text("notes"),
    createdAt: integer("created_at", { mode: "timestamp" }),
    updatedAt: integer("updated_at", { mode: "timestamp" }),
  },
  (table) => [index("idx_workout_templates_user_id").on(table.userId)],
);

/** Ordered exercises within a workout template. */
export const workoutTemplateExercises = sqliteTable(
  "workout_template_exercises",
  {
    id: text("id").primaryKey(),
    templateId: text("template_id").notNull(),
    exerciseId: text("exercise_id").notNull(),
    supersetId: text("superset_id"),
    notes: text("notes"),
    orderIndex: integer("order_index").notNull(),
  },
  (table) => [
    index("idx_workout_template_exercises_template_id").on(table.templateId),
    index("idx_workout_template_exercises_exercise_id").on(table.exerciseId),
  ],
);

/** A single completed (or in-progress) workout session. Totals are denormalized for fast list views. */
export const workouts = sqliteTable(
  "workouts",
  {
    id: text("id").primaryKey(),
    userId: text("user_id").notNull(),
    templateId: text("template_id"),
    title: text("title").notNull(),
    startTime: integer("start_time", { mode: "timestamp" }).notNull(),
    endTime: integer("end_time", { mode: "timestamp" }),
    durationSeconds: integer("duration_seconds"),
    totalVolume: real("total_volume").default(0),
    volumeUnit: text("volume_unit").default("kg"),
    setCount: integer("set_count").default(0),
    hasPr: integer("has_pr", { mode: "boolean" }).default(false),
    notes: text("notes"),
    createdAt: integer("created_at", { mode: "timestamp" }),
  },
  (table) => [
    index("idx_workouts_user_id").on(table.userId),
    index("idx_workouts_start_time").on(table.userId, table.startTime),
  ],
);

/** Ordered exercises performed within a workout session. */
export const workoutExercises = sqliteTable(
  "workout_exercises",
  {
    id: text("id").primaryKey(),
    workoutId: text("workout_id").notNull(),
    exerciseId: text("exercise_id").notNull(),
    supersetId: text("superset_id"),
    notes: text("notes"),
    orderIndex: integer("order_index").notNull(),
  },
  (table) => [
    index("idx_workout_exercises_workout_id").on(table.workoutId),
    index("idx_workout_exercises_exercise_id").on(table.exerciseId),
  ],
);

/** Individual sets logged for a workout exercise, including weight, reps, RPE, and 1RM estimates. */
export const workoutSets = sqliteTable(
  "workout_sets",
  {
    id: text("id").primaryKey(),
    workoutExerciseId: text("workout_exercise_id").notNull(),
    setType: text("set_type").$type<SetType>().default("NO"),
    weight: real("weight").notNull().default(0),
    weightUnit: text("weight_unit").default("kg"),
    reps: integer("reps").notNull().default(0),
    rpe: real("rpe"),
    estimated1rm: real("estimated_1rm"),
    estimated1rmFormula: text("estimated_1rm_formula").$type<Formula1rm>(),
    isPr: integer("is_pr", { mode: "boolean" }).default(false),
    prType: text("pr_type"),
    orderIndex: integer("order_index").notNull(),
  },
  (table) => [index("idx_workout_sets_exercise").on(table.workoutExerciseId)],
);

/** Cache of best personal records per user/exercise/type. Unique on (user_id, exercise_id, pr_type). */
export const personalRecords = sqliteTable(
  "personal_records",
  {
    id: text("id").primaryKey(),
    userId: text("user_id").notNull(),
    exerciseId: text("exercise_id").notNull(),
    prType: text("pr_type").$type<PrType>().notNull(),
    value: real("value").notNull(),
    valueUnit: text("value_unit"),
    achievedAt: integer("achieved_at", { mode: "timestamp" }).notNull(),
    workoutSetId: text("workout_set_id"),
  },
  (table) => [
    uniqueIndex("idx_personal_records_unique").on(table.userId, table.exerciseId, table.prType),
    index("idx_personal_records_user_exercise").on(table.userId, table.exerciseId),
    index("idx_personal_records_achieved_at").on(table.userId, table.achievedAt),
  ],
);

/** User body composition and measurement log (weight, body fat, circumferences). */
export const bodyMeasurements = sqliteTable(
  "body_measurements",
  {
    id: text("id").primaryKey(),
    userId: text("user_id").notNull(),
    date: text("date").notNull(),
    weight: real("weight"),
    weightUnit: text("weight_unit").default("kg"),
    bodyFatPct: real("body_fat_pct"),
    chest: real("chest"),
    waist: real("waist"),
    hips: real("hips"),
    shoulders: real("shoulders"),
    biceps: real("biceps"),
    forearms: real("forearms"),
    thighs: real("thighs"),
    calves: real("calves"),
    neck: real("neck"),
    height: real("height"),
    lengthUnit: text("length_unit").default("cm"),
    photoUrl: text("photo_url"),
    createdAt: integer("created_at", { mode: "timestamp" }),
  },
  (table) => [index("idx_body_measurements_user_date").on(table.userId, table.date)],
);

// ==========================================
// DB HELPER
// ==========================================

export function getDb(c: Context<Env>) {
  return drizzle(c.env.DB, {
    logger: true,
    schema: {
      user,
      session,
      account,
      verification,
      units,
      usersProfile,
      userSettings,
      muscleGroups,
      exercises,
      exerciseSecondaryMuscles,
      workoutTemplates,
      workoutTemplateExercises,
      workouts,
      workoutExercises,
      workoutSets,
      personalRecords,
      bodyMeasurements,
    },
  });
}

export type DrizzleDb = ReturnType<typeof getDb>;
